fix(webview): remove extra padding

--- a/src/webview-ui/App.css
+++ b/src/webview-ui/App.css
@@ -4,3 +4,7 @@ main {
   height: 100%;
   width: 100%;
 }
+
+body {
+  padding: 0;
+}
